New dark theme, single-category URL structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: "orbitalflower"
 description: "orbitalflower"
+author: "orbitalflower"
+defaultlicense: "CC BY"
+hitcounterid: "107279"
 
 permalink: none
 
