Testing layout changes

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "orbitalflower"
 description: "orbitalflower"
 author: "orbitalflower"
 defaultlicense: "CC BY"
-hitcounterid: "107279"
+#hitcounterid: "107279"
 
 permalink: none
 
